--- a/src/components/Feedback/index.css
+++ b/src/components/Feedback/index.css
@@ -5,6 +5,7 @@
 .Feedback {
   box-shadow: inset 0 0 0 0.25rem var(--green);
   display: block;
+  max-width: 80rem;
   padding: 1.5rem 1.5rem 1.75rem;
 
   &:not(:first-child) {
